@@ -11,8 +11,9 @@ model_limit=40
 post_len_limit=100000
 test_mode=1
 stats_log_dir=
-
-# Account list (separated by spaces) filtered by OpenResty::Filter::QP
+# Account list (separated by spaces) that have access to the Unsafe API :
+unsafe=
+# Account list (separated by spaces) filtered by OpenResty::Filter::QP :
 filtered=
 
 [backend]
@@ -32,4 +33,6 @@ servers=
 use_http=0
 server=tester:password@localhost
 server2=tester2:password2@localhost
+# whether test the Unsafe API
+test_unsafe=0
 
